@@ -51,8 +51,12 @@
 		<option name='print_xpath_results' value=''/>
 		<option name='use_log' value=''/>
 
+		<!-- valgrind options -->
+		<option name='use_valgrind' value='1'/>
+		<option name='valgrind_binary' value=''/>
+		<option name='valgrind_parameters' value=''/>
+
 		<!-- additional options -->
-		<option name='use_valgrind' value=''/>
 		<option name='test_createconfig' value=''/>
 
 		<!-- hacks -->
